--- a/tdoa.ipynb
+++ b/tdoa.ipynb
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementation of "
+    "## Implementation of the nonlinear least-squares estimate for finding the coordinates of source/pinger using the 6 tdoa (for 4 microphones/hydrophones)"
    ]
   },
   {
@@ -453,6 +453,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ignore this block of code\n",
+    "\n",
     "def func(x, y, z, a, b, c):\n",
     "    f = (sqrt(x-)-sqrt())\n",
     "    f = (a**2\n",
@@ -978,7 +980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load recordings from 4 audio sources"
+    "## Load actual webcam recordings (4 audio channels, 2 from each webcam)"
    ]
   },
   {
